# project-3

./: README.md
DESIGN PROJECT/: DESIGN MODEL IOS.rtf  DESIGN MODEL.rtf  readme.md
TomorrowFlutterApp/tomorrow_flutter_android/: README.md  pubspec.yaml
TomorrowFlutterApp/tomorrow_flutter_android/android/app/: build.gradle
TomorrowFlutterApp/tomorrow_flutter_android/android/app/src/main/: AndroidManifest.xml
TomorrowFlutterApp/tomorrow_flutter_android/android/app/src/main/kotlin/com/example/tomorrow_flutter_android/: MainActivity.kt
TomorrowFlutterApp/tomorrow_flutter_android/ios/Runner/: Info.plist
TomorrowFlutterApp/tomorrow_flutter_android/ios/Runner.xcodeproj/: project.pbxproj
TomorrowFlutterApp/tomorrow_flutter_android/linux/: CMakeLists.txt  my_application.cc
TomorrowFlutterApp/tomorrow_flutter_android/macos/Runner.xcodeproj/: project.pbxproj
TomorrowFlutterApp/tomorrow_flutter_android/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
TomorrowFlutterApp/tomorrow_flutter_android/macos/Runner/Configs/: AppInfo.xcconfig
TomorrowFlutterApp/tomorrow_flutter_android/test/: widget_test.dart
TomorrowFlutterApp/tomorrow_flutter_android/web/: index.html  manifest.json
TomorrowFlutterApp/tomorrow_flutter_android/windows/: CMakeLists.txt
TomorrowFlutterApp/tomorrow_flutter_android/windows/runner/: Runner.rc  main.cpp
attemp server on C++/: main.cpp
attemp server on C++/parsing/: parsing.cpp
flutter/tomorrow_app/: pubspec.yaml
flutter/tomorrow_app/lib/: main.dart
flutter/tomorrow_app/lib/view_models/: app_view_model.dart
flutter/tomorrow_app/lib/views/: login_page.dart  task_page.dart
parsing/: parsing.sln  parsing.vcxproj
server/: CMakeLists.txt  json_format.md  main.cpp  parsing.h  test  toolbox.h
server/include/xlnt-568ac85346bc37757b0cd16464e7e1ea7656df91/source/cell/: phonetic_run.cpp
server/include/xlnt-568ac85346bc37757b0cd16464e7e1ea7656df91/source/utils/: time.cpp
server/rasp/: raspisanie.xlsx
server/to_do/: json  post
tomorrow_flutter/: README.md  pubspec.yaml
tomorrow_flutter/android/app/: build.gradle
tomorrow_flutter/android/app/src/main/: AndroidManifest.xml
tomorrow_flutter/android/app/src/main/kotlin/com/example/tomorrow_flutter/: MainActivity.kt
tomorrow_flutter/ios/Runner/: Info.plist
tomorrow_flutter/ios/Runner.xcodeproj/: project.pbxproj
tomorrow_flutter/linux/: CMakeLists.txt  my_application.cc
tomorrow_flutter/macos/Runner.xcodeproj/: project.pbxproj
tomorrow_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
tomorrow_flutter/macos/Runner/Configs/: AppInfo.xcconfig
tomorrow_flutter/test/: widget_test.dart
tomorrow_flutter/web/: index.html  manifest.json
tomorrow_flutter/windows/: CMakeLists.txt
tomorrow_flutter/windows/runner/: Runner.rc  main.cpp
